--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,50 +1,38 @@
-# cf. https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html
-# L'URL de la source de donn\u00c3\u00a9es
+# Configuration du login / password de l'administrateur
+admin.login=ElonMusk
+admin.password=bonjour8
+admin.email=Elon.Musk@tesla.com
+
+# cf. https://code.chamo.de/2017/04/21/spring-boot-jpa-encoding-data-sql/
+spring.datasource.sqlScriptEncoding=UTF-8
+# L'URL de la source de données :SGBD H2 en mémoire vive
 spring.datasource.url=jdbc:h2:mem:testdb
-
-# Autres exemples de configuration de la source de donn\u00c3\u00a9es
-#spring.datasource.url=jdbc:derby:memory:comptoirs;create=true
-#spring.datasource.username=app
-#spring.datasource.password=app
-#spring.datasource.driver-class-name=org.apache.derby.jdbc.ClientDriver
-
-# Comment hibernate doit recr\u00c3\u00a9\u00c3\u00a9r le sch\u00c3\u00a9ma de la BD
-# Hibernate ddl auto (create, create-drop, update, none): with "create-drop" the database
+# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
+# On recrée automatiquement le schéma relationnel à partir des annotations JPA
 spring.jpa.hibernate.ddl-auto=create-drop
-
-# Optionnel : g\u00c3\u00a9n\u00c3\u00a9rer les instructions SQL pour la cr\u00c3\u00a9ation du sch\u00c3\u00a9ma relationnel (DDL)
-# Par d\u00c3\u00a9faut, le code SQL des create table sera affich\u00c3\u00a9 dans la console
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
-
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-# Encodage des scripts sql d'initialisation de la BD : data.sql, schema.sql
-# cf. https://code.chamo.de/2017/04/21/spring-boot-jpa-encoding-data-sql/
-spring.datasource.sqlScriptEncoding=UTF-8
-server.port=8081
+spring.messages.basename=validation
 
-# Affichage par d\u00c3\u00a9faut des erreurs du serveur
 server.error.whitelabel.enabled=true
 
-# La console H2 est activ\u00c3\u00a9e automatiquement si on utilise Spring Boot Dev Tools 
+# La console H2 est activée automatiquement si on utilise Spring Boot Dev Tools
 #spring.h2.console.enabled=true
-# L'URL par d\u00c3\u00a9faut de la console H2, customisable
+# L'URL par défaut de la console H2, customisable
 #spring.h2.console.path=/h2-console
-#
-# Configuration de la g\u00c3\u00a9n\u00c3\u00a9ration de JSON
+
+
 spring.data.rest.defaultMediaType=application/json
-# Pour g\u00c3\u00a9n\u00c3\u00a9rer du joli JSON
+# Pour générer du joli JSON
 spring.jackson.serialization.indent-output=true
-# L'API REST est expos\u00c3\u00a9e \u00c3\u00a0 l'url http://localhost:8080/api
+
+# L'API REST est exposée à l'url http://localhost:8080/api
 spring.data.rest.base-path=api
 
-# Configuration des logs
 logging.level.web=DEBUG
-# Montrer le d\u00c3\u00a9tail des param\u00c3\u00a8tres HTTP transmis dans les logs
+# Montrer le détail des paramètres HTTP transmis dans les logs
 spring.mvc.log-request-details=true
 
 # cf. https://www.baeldung.com/sql-logging-spring-boot
