--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,11 @@ admin.email=Elon.Musk@tesla.com
 
 # cf. https://code.chamo.de/2017/04/21/spring-boot-jpa-encoding-data-sql/
 spring.datasource.sqlScriptEncoding=UTF-8
-# L'URL de la source de données :SGBD H2 en mémoire vive
+# L'URL de la source de donn\u00c3\u00a9es :SGBD H2 en m\u00c3\u00a9moire vive
 spring.datasource.url=jdbc:h2:mem:testdb
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-# On recrée automatiquement le schéma relationnel à partir des annotations JPA
+# On recr\u00c3\u00a9e automatiquement le sch\u00c3\u00a9ma relationnel \u00c3\u00a0 partir des annotations JPA
 spring.jpa.hibernate.ddl-auto=create-drop
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
@@ -18,21 +18,21 @@ spring.messages.basename=validation
 
 server.error.whitelabel.enabled=true
 
-# La console H2 est activée automatiquement si on utilise Spring Boot Dev Tools
+# La console H2 est activ\u00c3\u00a9e automatiquement si on utilise Spring Boot Dev Tools
 #spring.h2.console.enabled=true
-# L'URL par défaut de la console H2, customisable
+# L'URL par d\u00c3\u00a9faut de la console H2, customisable
 #spring.h2.console.path=/h2-console
 
 
 spring.data.rest.defaultMediaType=application/json
-# Pour générer du joli JSON
+# Pour g\u00c3\u00a9n\u00c3\u00a9rer du joli JSON
 spring.jackson.serialization.indent-output=true
 
-# L'API REST est exposée à l'url http://localhost:8080/api
+# L'API REST est expos\u00c3\u00a9e \u00c3\u00a0 l'url http://localhost:8080/api
 spring.data.rest.base-path=api
 
 logging.level.web=DEBUG
-# Montrer le détail des paramètres HTTP transmis dans les logs
+# Montrer le d\u00c3\u00a9tail des param\u00c3\u00a8tres HTTP transmis dans les logs
 spring.mvc.log-request-details=true
 
 # cf. https://www.baeldung.com/sql-logging-spring-boot
