--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,19 @@
 admin.login=ElonMusk
 admin.password=bonjour8
 admin.email=Elon.Musk@tesla.com
+admin.telephone=0614732861
+admin.nom=Rogers
+admin.prenom=Nelson
+admin.prenom2=Lloyd
+admin.prenom3=Red
+admin.sexe=homme
+admin.code_postal=73640
+admin.commune_naiss=Sainte-Foy-Tarentaise
+admin.proche=Jules
+admin.email_proche=m.jules.claudel@gmail.com
+admin.proche2=Baptiste
+admin.email_proche2=baptiste.villedieu2000@gmail.com
+admin.date_naiss=03/11/1999
 
 # cf. https://code.chamo.de/2017/04/21/spring-boot-jpa-encoding-data-sql/
 spring.datasource.sqlScriptEncoding=UTF-8
