form sumbit ok. date valide renvoyée redirection apres connexion/inscription vers page utilisateur.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,14 +7,14 @@ admin.nom=Rogers
 admin.prenom=Nelson
 admin.prenom2=Lloyd
 admin.prenom3=Red
-admin.sexe=homme
+admin.sexe=1
 admin.code_postal=73640
 admin.commune_naiss=Sainte-Foy-Tarentaise
 admin.proche=Jules
 admin.email_proche=m.jules.claudel@gmail.com
 admin.proche2=Baptiste
 admin.email_proche2=baptiste.villedieu2000@gmail.com
-admin.date_naiss=03/11/1999
+admin.date_naiss=1999-11-03
 
 # cf. https://code.chamo.de/2017/04/21/spring-boot-jpa-encoding-data-sql/
 spring.datasource.sqlScriptEncoding=UTF-8
