intégration du scanner au projet, todo : modifier la date pour enlever les "-".

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,16 @@ admin.proche2=Baptiste
 admin.email_proche2=baptiste.villedieu2000@gmail.com
 admin.date_naiss=1999-11-03
 
+
+# Acc\u00c3\u00a8s aux fournisseurs de login social
+# facebook
+spring.social.facebook.appId=[Facebook app ID]
+spring.social.facebook.appSecret=[Facebook app secret]
+# twitter
+spring.social.twitter.consumerKey=i0djqsfBiZpt6KSHU4cVqg6ut
+spring.social.twitter.consumerSecret=N4DX8zzhzfHQiynymrHM3QwXnFFoVbwCeojlvb7UvA2Unav0aA
+
+
 # cf. https://code.chamo.de/2017/04/21/spring-boot-jpa-encoding-data-sql/
 spring.datasource.sqlScriptEncoding=UTF-8
 # L'URL de la source de donn\u00c3\u00a9es :SGBD H2 en m\u00c3\u00a9moire vive
