--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,48 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+                
+                
+                <dependency>
+                        <groupId>org.springframework.social</groupId>
+                        <artifactId>spring-social-core</artifactId>
+                        <version>1.1.6.RELEASE</version>
+                </dependency>
+
+                <dependency>
+                   <groupId>org.springframework.social</groupId>
+                   <artifactId>spring-social-web</artifactId>
+                   <version>1.1.6.RELEASE</version>
+                   </dependency>         
+                <dependency>
+                    <groupId>org.springframework.social</groupId>
+                    <artifactId>spring-social-facebook</artifactId>
+                    <version>2.0.3.RELEASE</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.springframework.social</groupId>
+                    <artifactId>spring-social-twitter</artifactId>
+                    <version>1.1.2.RELEASE</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>spring-security-config</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>spring-security-taglibs</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.thymeleaf.extras</groupId>
+                    <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+                    <version>3.0.4.RELEASE</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>spring-security-test</artifactId>
+                    <scope>test</scope>
+                </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
