--- a/pom.xml
+++ b/pom.xml
@@ -168,10 +168,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+                        <plugin>
                                 <groupId>com.heroku.sdk</groupId>
                                 <artifactId>heroku-maven-plugin</artifactId>
                                 <version>3.0.3</version>
-			</plugin>
+                        </plugin>
 		</plugins>
 	</build>
 </project>
