--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,14 @@
                                 <artifactId>heroku-maven-plugin</artifactId>
                                 <version>3.0.3</version>
                         </plugin>
+                        <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                                <source>10</source>
+                               <target>10</target>
+                        </configuration>
+                    </plugin>
 		</plugins>
 	</build>
 </project>
