--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,3 +64,22 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.pattern.console=%clr(%-5p)  %cyan(%logger{15}) - %msg %n
+
+#Envoi d'un email
+logging.level.org.springframework.mail=DEBUG
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=legac.etest@gmail.com
+spring.mail.password=TestamentHair
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+# SSL, post 465
+#spring.mail.properties.mail.smtp.socketFactory.port = 465
+#spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+# References
+# https://www.mkyong.com/java/javamail-api-sending-email-via-gmail-smtp-example/
