Changement login et password admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuration du login / password de l'administrateur
-admin.login=ElonMusk
-admin.password=bonjour8
-admin.email=Elon.Musk@tesla.com
+admin.login=Legace
+admin.password=TestamentHair1
+admin.email=legac.e@gmail.com
 admin.telephone=0614732861
 admin.nom=Rogers
 admin.prenom=Nelson
