--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -5,7 +5,7 @@
 # la variable d'environnement SPRING_PROFILES_ACTIVE
 # heroku config:set SPRING_PROFILES_ACTIVE=heroku
 # heroku configure automatiquement la variable d'environnement DATABASE_URL
-spring.datasource.url=${/h2-console}
+spring.datasource.url=${DATABASE_URL}
 
 # Comment hibernate doit recréer le schéma de la BD
 # On ne recrée pas la base de donnée à chaque démarrage, éventuellement on met à jour le schéma
