--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,7 @@
                         <groupId>org.springframework.social</groupId>
                         <artifactId>spring-social-core</artifactId>
                         <version>1.1.6.RELEASE</version>
+                        <type>jar</type>
                 </dependency>
 
                 <dependency>
